src/test/deca/context/invalid/sansObjet/Undeclared2.deca
{
    float x = 2020.2;
    x = 0.1 + c;
    
}